# azoth-balancer

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  example.config.toml
.github/workflows/: ci.yml
grafana-dashboards/: azoth-balancer-monitoring-dashboard-beta.json
src/: balancer.rs  config.rs  config_reloader.rs  endpoint.rs  forwarder.rs  lib.rs  main.rs  shutdown.rs  strategy.rs
src/utils/: cooldown.rs  health.rs  metrics.rs  mod.rs
