[package]
name = "azoth-balancer"
authors = ["AzothSolver <azothsolver@gmail.com>"]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust-based high-performance RPC load balancer offering intelligent 3-tier endpoint routing, failover, rate limiting, and monitoring for reliable, low-latency blockchain operations."
repository = "https://github.com/AzothSolver/azoth-balancer"
documentation = "https://docs.rs/azoth-balancer"
readme = "README.md"
homepage = "https://github.com/AzothSolver/azoth-balancer"
rust-version = "1.82"
keywords = [
    "rpc",
    "load-balancer",
    "async",
    "tokio",
    "axum",
    "tiered-routing",
    "failover",
    "monitoring",
    "blockchain",
]
categories = [
    "network-programming",
    "web-programming",
    "asynchronous",
    "infrastructure",
    "system-programming",
]
exclude = [
    ".git",           # Git history
    ".gitignore",     # Local ignore file
    ".gitattributes", # Git attributes
    "target",         # Compiled binaries and intermediate files
    "tests/*",        # Test source code (optional, if not needed in crate)
    "benches/*",      # Benchmark files
    "examples/*",     # Example code (optional, if you want to keep examples)
    "config.toml",    # Local config
    ".env",           # Environment variables / secrets
    "*.log",          # Local log files
    "*.tmp",          # Temporary files
    "*.swp",          # Editor swap files
    ".vscode/*",      # VSCode workspace settings
    ".idea/*",        # JetBrains IDE files
    "*.iml",          # IDE module files
    ".DS_Store",      # macOS folder metadata
    "node_modules/*", # If you have any JS tooling
    "*.bak",          # Backup files
]


[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.6"                                                  # use 0.6 for Server re-export
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
parking_lot = "0.12.4"
prometheus = "0.14.0"
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.16"
hyper = { version = "1.7.0", features = ["http1", "server"] }
ratelimit_meter = "5.0.0"
bytes = "1.10.1"
tempfile = "3.23.0"

[[bin]]
name = "azoth-balancer"
path = "src/main.rs"
